...
    <string name="contact_given_name">Given name</string>
    <string name="contact_surname">Surname</string>
    <string name="contact_nickname">Nickname</string>
    <string name="contact_birthday">Birthday</string>
    <string name="contact_birthday_hint">1990-06-15 or --12-25</string>
    <string name="contact_value_n">Value %1$d</string>
    <string name="contact_remove">Remove</string>
    <string name="contact_add">Add</string>
    <string name="contact_create">Create contact</string>
    <string name="contact_save">Save changes</string>
    <string name="contact_error_given_name">At least one given name is required</string>

    <!-- Settings -->
...
